# dlPlotlyDataset

./: README.md  pyproject.toml  requirements-dev.txt  requirements.txt
app/: df_manage.py  dl_plotly_datasets.py  plotly_datasets_info.py
app/assets/: custom.css
