[tool.poetry]
name = "dlplotlydataset"
version = "0.2.0"
description = """\
This application selects plotly datasets from the Dropdown component and displays it in the DataTable component.\
The displayed Dataset is saved as a csv file by executing the Button component.\
"""
authors = ["7rikazhexde"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.2"
dash = "^2.7.1"
pyperclip = "^1.8.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
flake8 = "^6.0.0"
black = "^23.3.0"
isort = "^5.12.0"
mypy = "^1.3.0"
flake8-pyproject = "^1.2.3"
pre-commit = "^4.0.1"

[tool.black]
target-version = ['py310']

[tool.isort]

[tool.flake8]
ignore = ["E501","W503"]

[tool.mypy]
python_version = "3.10"
no_strict_optional = true
ignore_missing_imports = true
check_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests",]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
